--- a/index.html
+++ b/index.html
@@ -43,3 +43,41 @@ Eucaliptus
 Donate
 Gallery-->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Koala</title>
+		<meta name="viewport" content="width=device=width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+	<section class="primersection">
+		<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#sumo">Foundation</a></li>
+					<li><a href="#features">Koalas</a></li>
+					<li><a href="#features">Donate</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-left">
+					<li><a href="#sumo">Save the Koala</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	</section>
+</body>
+</html>
+
