primera section casi ok

--- a/index.html
+++ b/index.html
@@ -67,16 +67,24 @@ Gallery-->
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#sumo">Foundation</a></li>
-					<li><a href="#features">Koalas</a></li>
-					<li><a href="#features">Donate</a></li>
+					<li><a class="me" href="#text">Foundation</a></li>
+					<li><a class="me" href="#text">Koalas</a></li>
+					<li><a class="me" href="#text">Donate</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-left">
-					<li><a href="#sumo">Save the Koala</a></li>
+					<li><a class="me" href="#text">Save the Koala</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
+		<div class="row">
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				<div class="save">
+					<h4 class="dos" >Save The Koala</h4>
+					<p>Koalas are declining in rapid numbers because the trees where they spend a majority of their time are being quickly chopped down. Activists need to take action to try and protect these animals’ habitats so they do not become a thing of the past.</p>
+				</div>
+			</div>
+		</div>
 	</section>
 </body>
 </html>
