seccion uno con boton

--- a/index.html
+++ b/index.html
@@ -82,8 +82,11 @@ Gallery-->
 				<div class="save">
 					<h4 class="dos" >Save The Koala</h4>
 					<p>Koalas are declining in rapid numbers because the trees where they spend a majority of their time are being quickly chopped down. Activists need to take action to try and protect these animals’ habitats so they do not become a thing of the past.</p>
+						<button class="btn btn-default" type="button">See more</button>
 				</div>
+
 			</div>
+
 		</div>
 	</section>
 </body>
