--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Gallery-->
 <head>
 	<meta charset="UTF-8">
 	<title>Koala</title>
-		<meta name="viewport" content="width=device=width, initial-scale=1">
+	<meta name="viewport" content="width=device=width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.css">
@@ -56,38 +56,40 @@ Gallery-->
 <body>
 	<section class="primersection">
 		<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a class="me" href="#text">Foundation</a></li>
+						<li><a class="me" href="#text">Koalas</a></li>
+						<li><a class="me" href="#text">Donate</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-left">
+						<li><a class="me" href="#text">Save the Koala</a></li>
+					</ul>
+				</div>
 			</div>
-			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a class="me" href="#text">Foundation</a></li>
-					<li><a class="me" href="#text">Koalas</a></li>
-					<li><a class="me" href="#text">Donate</a></li>
-				</ul>
-				<ul class="nav navbar-nav navbar-left">
-					<li><a class="me" href="#text">Save the Koala</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+		</nav>
 		<div class="row">
-			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 				<div class="save">
 					<h4 class="dos" >Save The Koala</h4>
 					<p>Koalas are declining in rapid numbers because the trees where they spend a majority of their time are being quickly chopped down. Activists need to take action to try and protect these animals’ habitats so they do not become a thing of the past.</p>
-						<button class="btn btn-default" type="button">See more</button>
+					<button class="btn btn-default" type="button">See more</button>
 				</div>
-
 			</div>
-
 		</div>
+	</section>
+
+	<section class="segundasection">
+		
 	</section>
 </body>
 </html>
