seccion 2 casi ok

--- a/index.html
+++ b/index.html
@@ -89,7 +89,35 @@ Gallery-->
 	</section>
 
 	<section class="segundasection">
-		
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 hidden-sm hidden-xs">
+					<img src="img/tres.jpg" alt="tres" class="img-responsive">
+				</div>
+				
+				<div class="textos">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<p>FOUNDATION INFORMATION</p>
+					<h3>Koalas are cute but they're also under threat in their Aussie homeland!</h3>
+					<p>Koalas are well-known as an icon of Australia and many people who visit Australia as tourists hope to see and hold a koala. But it's less well known that koalas in the wild are facing unprecedented pressure as their trees are cleared, existing habitat becomes more vulnerable and isolated and more roads bisect their territories resulting in more koalas being run</p>
+				</div>
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+
+					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+						<h4>The Australian Koala Foundation</h4>
+						<p>AKFis the organisation dedicated to ‘saving the koala’. The AKF’s mission is to achieve the long-term conservation of koalas and their habitat and to diminish current and future threats to koalas in the wild. See more</p>	
+					</div>
+
+					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" >
+						<h4>AKF Vision</h4>
+						<p>The AKF’s vision includes a National Koala Act to provide solutions for managing koalas across all land tenures and setting a national standard for mapping koala habitat across its range so that conservation efforts on the ground can be maximised.See more</p>
+					</div>
+				</div>
+			</div>
+			</div>
+		</div>
+		</div>
 	</section>
 </body>
 </html>
