seccion dos lista y responsiva

--- a/index.html
+++ b/index.html
@@ -92,25 +92,25 @@ Gallery-->
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 hidden-sm hidden-xs">
-					<img src="img/tres.jpg" alt="tres" class="img-responsive">
+					<img src="img/tres.jpg" alt="tres" class="img-responsive" id="ph">
 				</div>
 				
 				<div class="textos">
 				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 					<p>FOUNDATION INFORMATION</p>
-					<h3>Koalas are cute but they're also under threat in their Aussie homeland!</h3>
+					<h3 class="titulofundacion">Koalas are cute but they're also under threat in their Aussie homeland!</h3>
 					<p>Koalas are well-known as an icon of Australia and many people who visit Australia as tourists hope to see and hold a koala. But it's less well known that koalas in the wild are facing unprecedented pressure as their trees are cleared, existing habitat becomes more vulnerable and isolated and more roads bisect their territories resulting in more koalas being run</p>
 				</div>
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 
-					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-						<h4>The Australian Koala Foundation</h4>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+						<h4 class="titulocuatro">The Australian Koala Foundation</h4>
 						<p>AKFis the organisation dedicated to ‘saving the koala’. The AKF’s mission is to achieve the long-term conservation of koalas and their habitat and to diminish current and future threats to koalas in the wild. See more</p>	
 					</div>
 
-					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" >
-						<h4>AKF Vision</h4>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" >
+						<h4 class="titulocuatro">AKF Vision</h4>
 						<p>The AKF’s vision includes a National Koala Act to provide solutions for managing koalas across all land tenures and setting a national standard for mapping koala habitat across its range so that conservation efforts on the ground can be maximised.See more</p>
 					</div>
 				</div>
@@ -119,6 +119,26 @@ Gallery-->
 		</div>
 		</div>
 	</section>
+
+	<section class="tres">
+		<div class="contenedor">
+			<div class="row">
+			<div class="textotres">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<p>EASY HELP</p> 
+			<h4 class="titulotres">Save Koalas From Possible Extinction!</h4>
+			<p>Loss of koala habitat is the major threat facing koalas today. Since white settlement of Australia, roughly 80% of the koala’s habitat has been destroyed and of what remains, most occurs on privately owned land and almost none is protected.</p>
+			<button class="btn btn-default" type="button">Read	 more</button>
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+				<img src="img/cosita.jpg" alt="cosita" class="img-responsive" id="cosita">
+			</div>
+			</div>
+			</div>
+		</div>
+		
+	</section>
+
 </body>
 </html>
 
