seccion cuatro ok

--- a/index.html
+++ b/index.html
@@ -139,6 +139,21 @@ Gallery-->
 		
 	</section>
 
+<section class="cuatro">
+	<div class="contienecuatro">
+		<div class="row">
+			<div class=" col-lg-offset-6 col-lg-4 col-md-offset-6  col-md-4 col-sm-12 col-xs-12">
+				<div class="helpi">
+					<h6 class="help">HELP KOALAS”</h6>
+					<h4 class="help">"No Tree... No Me"</h4>
+					<h6 class="help">Dick Marks, AKF’s creative suppor</h6>
+				</div>
+			</div>
+		</div>
+		
+	</div>
+</section>
+
 </body>
 </html>
 
