--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ Gallery-->
 	<meta name="viewport" content="width=device=width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="https://use.fontawesome.com/be0dd1e218.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -152,6 +153,39 @@ Gallery-->
 		</div>
 		
 	</div>
+</section>
+
+<section class="cinco">
+<div class="contienecinco">
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+			<h4 class="titulocinco">It’s not hard to see how we can help.</h4>
+		</div>
+	</div>
+	<div class="row">
+		<div class="textcinco">
+		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
+
+		<span class="glyphicon glyphicon-heart" aria-hidden="true" id="icono"></span>
+		<p>There are many people who are working very hard to achieve the conservation of the koala and you can join them by visiting www.savethekoala.com.</p>	
+		</div>
+		
+		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
+		<span class="glyphicon glyphicon-globe" aria-hidden="true" id="icono"></span>
+
+		<p>The only way to save koalas is to save their habitat, the eucalyptus forests where they live, and which they must have to survive. This is what the Australian Koala Foundation is trying to achieve.</p>
+		</div>
+	
+		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center"	>
+		<i class="fa fa-paw" aria-hidden="true" id="icono"></i>
+		<p>But they can't do it alone and they need the help of people like you. You may think that just one person cannot make any difference in helping koalas or in helping our environment generally, but if each person does even one little thing to help, it can add up to a lot of help.</p>
+		</div>
+		
+					
+		</div>
+	</div>
+</div>
+	
 </section>
 
 </body>
