--- a/index.html
+++ b/index.html
@@ -1,49 +1,4 @@
-<!-- Seccion bienvenida
-Save The Koala
-Koalas are declining in rapid numbers because the trees where they spend a majority of their time are being quickly chopped down. Activists need to take action to try and protect these animals’ habitats so they do not become a thing of the past. -->
-
-<!-- seccion 2 
-FOUNDATION INFORMATION
-Koalas are cute but they're also under threat in their Aussie homeland!
-Koalas are well-known as an icon of Australia and many people who visit Australia as tourists hope to see and hold a koala. But it's less well known that koalas in the wild are facing unprecedented pressure as their trees are cleared, existing habitat becomes more vulnerable and isolated and more roads bisect their territories resulting in more koalas being run over.
-
-The Australian Koala Foundation 
-AKF is the organisation dedicated to ‘saving the koala’. The AKF’s mission is to achieve the long-term conservation of koalas and their habitat and to diminish current and future threats to koalas in the wild. See more
-
-AKF Vision
-The AKF’s vision includes a National Koala Act to provide solutions for managing koalas across all land tenures and setting a national standard for mapping koala habitat across its range so that conservation efforts on the ground can be maximised.See more -->
-
-<!-- seccion 3
-EASY HELP
-Save Koalas From Possible Extinction!
-Loss of koala habitat is the major threat facing koalas today. Since white settlement of Australia, roughly 80% of the koala’s habitat has been destroyed and of what remains, most occurs on privately owned land and almost none is protected. -->
-
-<!-- seccion 4 
-HELP KOALAS
-“No Tree... No Me”
-Dick Marks, AKF’s creative supporter -->
-
-<!-- seccion seis 
-
-It’s not hard to see how we can help.
-
-There are many people who are working very hard to achieve the conservation of the koala and you can join them by visiting www.savethekoala.com.
-
-The only way to save koalas is to save their habitat, the eucalyptus forests where they live, and which they must have to survive. This is what the Australian Koala Foundation is trying to achieve.
-
-But they can't do it alone and they need the help of people like you. You may think that just one person cannot make any difference in helping koalas or in helping our environment generally, but if each person does even one little thing to help, it can add up to a lot of help.-->
-
-<!-- footer 
-
-ABOUT
-The Australian Koala Foundation receives no funding from any government so they rely on people like you to help raise funds for their important work in saving koalas for future generations to enjoy. If you’d like to learn more, contact us anytime at akf@savethekoala.com.
-
-Koalas
-Eucaliptus
-Donate
-Gallery-->
-
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -81,8 +36,8 @@ Gallery-->
 		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 				<div class="save">
-					<h4 class="dos" >Save The Koala</h4>
-					<p>Koalas are declining in rapid numbers because the trees where they spend a majority of their time are being quickly chopped down. Activists need to take action to try and protect these animals’ habitats so they do not become a thing of the past.</p>
+					<h4 class="dos">Save The Koala</h4>
+					<p class="parrafouno">Koalas are declining in rapid numbers because the trees where they spend a majority of their time are being quickly chopped down. Activists need to take action to try and protect these animals’ habitats so they do not become a thing of the past.</p>
 					<button class="btn btn-default" type="button">See more</button>
 				</div>
 			</div>
@@ -175,31 +130,27 @@ Gallery-->
 
 		<p>The only way to save koalas is to save their habitat, the eucalyptus forests where they live, and which they must have to survive. This is what the Australian Koala Foundation is trying to achieve.</p>
 		</div>
-	<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
-
-	<!--al poner este icono se agrega sobre atras del texto pruebo dejandolo dentro de un div o span pero no cambia-->
+		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
 		<i class="fa fa-paw" aria-hidden="true" id="icono"></i>
-
 		<p>But they can't do it alone and they need the help of people like you. You may think that just one person cannot make any difference in helping koalas or in helping our environment generally, but if each person does even one little thing to help, it can add up to a lot of help.</p>
-		</div>
-				
+		</div>	
 		</div>
 	</div>
 </div>
 </section>
 <section class="seis">
 <div class="contieneseis">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-			<h4 class="tituloseis">It’s not hard to see how we can help.</h4>
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+		<h4 class="tituloseis">It’s not hard to see how we can help.</h4>
 		</div>
 		</div>
-<div class="row">
+	<div class="row">
 		<div class="textseis">
 		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
 
 		<p>PERSONAL</p>
-		<i class="fa fa-usd" aria-hidden="true"></i>
+		<i class="fa fa-usd" aria-hidden="true" id="dolar"></i>
 		<h1 class="num">19</h1>	<h4 class="aud">/AUD</h4>
 		<p class="linea">Save 1 Koala per month.</p>
 		<p class="linea">1 T-shirt</p>
@@ -212,8 +163,8 @@ Gallery-->
 		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
 
 		<p>PERSONAL</p>
-		<i class="fa fa-usd" aria-hidden="true"></i>
-		<h1 class="num">59</h1>	<h4 class="aud">/AUD</h4>
+		<i class="fa fa-usd" aria-hidden="true" id="dolar"></i>
+		<h1 class="num">29</h1>	<h4 class="aud">/AUD</h4>
 		<p class="linea">Save 2 Koala per month.</p>
 		<p class="linea">2 T-shirt</p>
 		<p class="linea">2 visits per month</p>
@@ -225,7 +176,7 @@ Gallery-->
 		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
 
 		<p>PERSONAL</p>
-		<i class="fa fa-usd" aria-hidden="true"></i>
+		<i class="fa fa-usd" aria-hidden="true" id="dolar"></i>
 		<h1 class="num">59</h1>	<h4 class="aud">/AUD</h4>
 		<p class="linea">Save 3 Koala per month.</p>
 		<p class="linea">3 T-shirt</p>
@@ -233,13 +184,46 @@ Gallery-->
 		<p>PubliicAPI acces</p>
 		<br>
 		<button class="btn btn-default" type="button" id="donate">DONATE</button>
-		</div>
-
-
-					
+		</div>			
 	</div>
 </div>
 </div>
+</section>
+
+<section class="pie">
+<div contienesiete>
+<div class="row">
+		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+			<p class="verde">ABOUT</p>
+			<p class="blanco">The Australian Koala Foundation receives no funding from any government so they rely on people like you to help raise funds for their important work in saving koalas for future generations to enjoy. If you’d like to learn more, contact us anytime at 
+			<p class="verde" id="mouse">akf@savethekoala.com</p>
+			</p>
+		</div>
+	<div class="row">
+	<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center">
+	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
+		 <p id="mouse">Koalas</p>
+		 <p id="mouse">Eucaliptus</p>
+		 <p id="mouse">Donate</p>
+		 <p id="mouse">Gallery</p>
+	</div>	
+	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
+		 <p id="mouse">Koalas</p>
+		 <p id="mouse">Eucaliptus</p>
+		 <p id="mouse">Donate</p>
+		 <p id="mouse">Gallery</p>
+	</div>	
+	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
+		 <p id="mouse">Koalas</p>
+		 <p id="mouse">Eucaliptus</p>
+		 <p id="mouse">Donate</p>
+		 <p id="mouse">Gallery</p>
+	</div>
+	</div>	
+	</div>
+</div>
+</div>
+	
 </section>
 
 </body>
