--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</div>
 		</nav>
 		<div class="row">
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+			<div class=" col-lg-4 col-md-4 col-sm-12 col-xs-12">
 				<div class="save">
 					<h4 class="dos">Save The Koala</h4>
 					<p class="parrafouno">Koalas are declining in rapid numbers because the trees where they spend a majority of their time are being quickly chopped down. Activists need to take action to try and protect these animals’ habitats so they do not become a thing of the past.</p>
@@ -77,7 +77,7 @@
 	</section>
 
 	<section class="tres">
-		<div class="contenedor">
+		<div class="container">
 			<div class="row">
 			<div class="textotres">
 			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -87,7 +87,7 @@
 			<button class="btn btn-default" type="button">Read	 more</button>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-				<img src="img/cosita.jpg" alt="cosita" class="img-responsive" id="cosita">
+			<img src="img/cosita.jpg" alt="cosita" class="img-responsive" id="cosita">
 			</div>
 			</div>
 			</div>
@@ -96,13 +96,13 @@
 	</section>
 
 <section class="cuatro">
-	<div class="contienecuatro">
+	<div class="container">
 		<div class="row">
 			<div class=" col-lg-offset-6 col-lg-4 col-md-offset-6  col-md-4 col-sm-12 col-xs-12">
 				<div class="helpi">
-					<h6 class="help">HELP KOALAS”</h6>
-					<h4 class="help">"No Tree... No Me"</h4>
-					<h6 class="help">Dick Marks, AKF’s creative suppor</h6>
+				<h6 class="help">HELP KOALAS”</h6>
+				<h4 class="help">"No Tree... No Me"</h4>
+				<h6 class="help">Dick Marks, AKF’s creative suppor</h6>
 				</div>
 			</div>
 		</div>
@@ -111,7 +111,7 @@
 </section>
 
 <section class="cinco">
-<div class="contienecinco">
+<div class="container">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
 			<h4 class="titulocinco">It’s not hard to see how we can help.</h4>
@@ -131,6 +131,7 @@
 		<p>The only way to save koalas is to save their habitat, the eucalyptus forests where they live, and which they must have to survive. This is what the Australian Koala Foundation is trying to achieve.</p>
 		</div>
 		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
+
 		<i class="fa fa-paw" aria-hidden="true" id="icono"></i>
 		<p>But they can't do it alone and they need the help of people like you. You may think that just one person cannot make any difference in helping koalas or in helping our environment generally, but if each person does even one little thing to help, it can add up to a lot of help.</p>
 		</div>	
@@ -139,7 +140,7 @@
 </div>
 </section>
 <section class="seis">
-<div class="contieneseis">
+<div class="container">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
 		<h4 class="tituloseis">It’s not hard to see how we can help.</h4>
@@ -191,7 +192,7 @@
 </section>
 
 <section class="pie">
-<div contienesiete>
+<div container>
 <div class="row">
 		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 			<p class="verde">ABOUT</p>
